crates/ruff_python_parser/tests/snapshots/invalid_syntax@params_multiple_slash_separator.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
assertion_line: 118
input_file: crates/ruff_python_parser/resources/inline/err/params_multiple_slash_separator.py
---
## AST

```
Module(
    ModModule {
        range: 0..53,
        body: [
            FunctionDef(
                StmtFunctionDef {
                    range: 0..24,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: "foo",
                        range: 4..7,
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 7..19,
                        posonlyargs: [
                            ParameterWithDefault {
                                range: 8..9,
                                parameter: Parameter {
                                    range: 8..9,
                                    name: Identifier {
                                        id: "a",
                                        range: 8..9,
                                    },
                                    annotation: None,
                                    convention: AstParamConvention {
                                        ownership: Borrow,
                                        mutability: Immutable,
                                    },
                                },
                                default: None,
                            },
                        ],
                        args: [
                            ParameterWithDefault {
                                range: 17..18,
                                parameter: Parameter {
                                    range: 17..18,
                                    name: Identifier {
                                        id: "b",
                                        range: 17..18,
                                    },
                                    annotation: None,
                                    convention: AstParamConvention {
                                        ownership: Borrow,
                                        mutability: Immutable,
                                    },
                                },
                                default: None,
                            },
                        ],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: None,
                    body: [
                        Expr(
                            StmtExpr {
                                range: 21..24,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        range: 21..24,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
            FunctionDef(
                StmtFunctionDef {
                    range: 25..52,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: "foo",
                        range: 29..32,
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 32..47,
                        posonlyargs: [
                            ParameterWithDefault {
                                range: 33..34,
                                parameter: Parameter {
                                    range: 33..34,
                                    name: Identifier {
                                        id: "a",
                                        range: 33..34,
                                    },
                                    annotation: None,
                                    convention: AstParamConvention {
                                        ownership: Borrow,
                                        mutability: Immutable,
                                    },
                                },
                                default: None,
                            },
                        ],
                        args: [
                            ParameterWithDefault {
                                range: 39..40,
                                parameter: Parameter {
                                    range: 39..40,
                                    name: Identifier {
                                        id: "b",
                                        range: 39..40,
                                    },
                                    annotation: None,
                                    convention: AstParamConvention {
                                        ownership: Borrow,
                                        mutability: Immutable,
                                    },
                                },
                                default: None,
                            },
                            ParameterWithDefault {
                                range: 42..43,
                                parameter: Parameter {
                                    range: 42..43,
                                    name: Identifier {
                                        id: "c",
                                        range: 42..43,
                                    },
                                    annotation: None,
                                    convention: AstParamConvention {
                                        ownership: Borrow,
                                        mutability: Immutable,
                                    },
                                },
                                default: None,
                            },
                        ],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: None,
                    body: [
                        Expr(
                            StmtExpr {
                                range: 49..52,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        range: 49..52,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | def foo(a, /, /, b): ...
  |               ^ Syntax Error: Only one '/' separator allowed
2 | def foo(a, /, b, c, /): ...
  |


  |
1 | def foo(a, /, /, b): ...
2 | def foo(a, /, b, c, /): ...
  |                     ^ Syntax Error: Only one '/' separator allowed
  |
